# chatbot-gitanillo

./: Cargo.toml  README.md  index.html
ia_conversacional/: Cargo.toml
ia_conversacional/src/: main.rs
ia_conversacional/static/: index.html
rust/: .env  package-lock.json
src/: main.rs
